--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack --watch --progress",
     "build": "webpack",
-    "start": "webpack serve --open"
+    "start": "webpack serve --open",
+    "prettierr": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "css-loader": "^6.7.3",
     "mini-css-extract-plugin": "^2.7.2",
     "style-loader": "^3.3.1",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "prettier": "^2.7.1"
   }
 }
